rename from data collection to detection

--- a/public/static/consent/Pakistan/default.html
+++ b/public/static/consent/Pakistan/default.html
@@ -1480,7 +1480,7 @@ to us when you participate in this research survey.</span></p>
 
 <p class=MsoNormal><span lang=EN-US>By selecting to consent on the <span
 class=SpellE><span style='color:#0E101A'>Virufy</span></span><span
-style='color:#0E101A'> COVID-19 Data Collection Form under “Consent to Study”</span>,
+style='color:#0E101A'> COVID-19 Cough Detection under “Consent to Study”</span>,
 you acknowledge that you have read and understood the <span class=SpellE>Virufy</span>
 Privacy Policy, and that you are providing your explicit consent to <span
 class=SpellE>Virufy’s</span> collection and processing of the categories of
