--- a/public/static/consentFormExample.html
+++ b/public/static/consentFormExample.html
@@ -1598,7 +1598,7 @@ class=msocomanchor id="_anchor_4"
 onmouseover="msoCommentShow('_anchor_4','_com_4')"
 onmouseout="msoCommentHide('_com_4')" href="#_msocom_4" language=JavaScript
 name="_msoanchor_4">[4]</a><![endif]><span style='mso-special-character:comment'>&nbsp;</span><span
-style='color:#0E101A'>Data Collection Form under “Step 1 – Consent to Study”</span>,
+style='color:#0E101A'>Cough Detection under “Step 1 – Consent to Study”</span>,
 you acknowledge that you have read and understood the <span class=SpellE>Virufy</span>
 Privacy Policy, and that you are providing your explicit consent to <span
 class=SpellE>Virufy’s</span> collection and processing of the categories of
