--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
     rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
