--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#13C2C2">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="msapplication-TileColor" content="#53b27e">
   <meta name="description"
     content="Virufy - assess your risk for COVID-19 with our AI-powered app using your smartphone. A project of Stanford University's COVID-19 Response Innovation Lab">
